@@ -31,8 +31,6 @@
 #include <QtMath>
 #include <cmath>
 
-using libclient::settings::zoomMax;
-using libclient::settings::zoomMin;
 using utils::Cursors;
 
 namespace widgets {
@@ -482,7 +480,7 @@ void CanvasView::zoomSteps(int steps)
 void CanvasView::zoomStepsAt(int steps, const QPointF &point)
 {
 	constexpr qreal eps = 1e-5;
-	const QVector<qreal> &zoomLevels = libclient::settings::zoomLevels();
+	const QVector<qreal> &zoomLevels = libclient::settings::getZoomLevels();
 	// This doesn't actually take the number of steps into account, it just
 	// zooms by a single step. But that works really well, so I'll leave it be.
 	if(steps > 0) {
@@ -491,7 +489,8 @@ void CanvasView::zoomStepsAt(int steps, const QPointF &point)
 			i++;
 		}
 		qreal level = zoomLevels[i];
-		qreal zoom = m_zoom > level - eps ? zoomMax : qMax(m_zoom, level);
+		qreal zoom = m_zoom > level - eps ? libclient::settings::getZoomMax()
+										  : qMax(m_zoom, level);
 		setZoomAt(zoom, point);
 	} else if(steps < 0) {
 		int i = zoomLevels.size() - 1;
@@ -499,7 +498,8 @@ void CanvasView::zoomStepsAt(int steps, const QPointF &point)
 			i--;
 		}
 		qreal level = zoomLevels[i];
-		qreal zoom = m_zoom < level + eps ? zoomMin : qMin(m_zoom, level);
+		qreal zoom = m_zoom < level + eps ? libclient::settings::getZoomMin()
+										  : qMin(m_zoom, level);
 		setZoomAt(zoom, point);
 	}
 }
@@ -639,7 +639,9 @@ void CanvasView::resetZoomCursor()
 
 void CanvasView::setZoomAt(qreal zoom, const QPointF &point)
 {
-	qreal newZoom = qBound(zoomMin, zoom, zoomMax);
+	qreal newZoom = qBound(
+		libclient::settings::getZoomMin(), zoom,
+		libclient::settings::getZoomMax());
 	if(newZoom != m_zoom) {
 		QTransform matrix;
 		mirrorFlip(matrix, m_mirror, m_flip);
