@@ -187,7 +187,7 @@ void ReferenceView::setZoomAt(qreal zoom, const QPointF &point)
 void ReferenceView::zoomStepsAt(int steps, const QPointF &point)
 {
 	constexpr qreal eps = 1e-5;
-	const QVector<qreal> &zoomLevels = libclient::settings::zoomLevels();
+	const QVector<qreal> &zoomLevels = libclient::settings::getZoomLevels();
 	// This doesn't actually take the number of steps into account, it just
 	// zooms by a single step. But that works really well, so I'll leave it be.
 	if(steps > 0) {
@@ -249,12 +249,12 @@ void ReferenceView::setInteractionMode(InteractionMode interactionMode)
 
 qreal ReferenceView::zoomMin()
 {
-	return libclient::settings::zoomMin;
+	return libclient::settings::getZoomMin();
 }
 
 qreal ReferenceView::zoomMax()
 {
-	return libclient::settings::zoomMax;
+	return libclient::settings::getZoomMax();
 }
 
 void ReferenceView::resizeEvent(QResizeEvent *event)
